# video-analyzer

./: .gitattributes  .gitignore  README.md  SKILL.md  cursor_feishu_notify.py  quick-start.sh
ai/: .gitignore  README.md  api_server.py  common.py  config.yaml  cursor_feishu_notify.py  event_engine.py  feishu.yaml.example  requirements.txt  schema.sql  start.sh  stop.sh  summary_job.py  vlm_worker.py
config/: streams.yaml
scripts/: frame_capture.py  health_check.py  stream_monitor.py
scripts/logs/: health_20260408_040332.txt
streaming/: mediamtx.yml  setup.sh  start.sh  stop.sh
streaming/www/: index.html
uvc_host/: CMakeLists.txt  README.md  build.sh
uvc_host/include/: uvc_event_record.h  uvc_protocol.h  uvc_stream.h  uvc_xu_ctrl.h
uvc_host/src/: main.c  uvc_event_record.c  uvc_stream.c  uvc_xu_ctrl.c
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js  style.css
web/src/api/: events.js
web/src/components/: AppHeader.vue  AppSidebar.vue  DeviceTree.vue  LayoutSelector.vue  VideoCell.vue  VideoGrid.vue
web/src/composables/: useWhepPlayer.js
web/src/mock/: devices.js
web/src/router/: index.js
web/src/stores/: devices.js  videoGrid.js
web/src/views/: DevicesView.vue  EventsView.vue  SummaryView.vue  VideoView.vue
